test/files/events-exp-lang-neg/bind-function.check
bind-function.scala:9: error: event expected, found Unit
  evt e1() = m()
              ^
one error found
