test/files/events-exp-lang-neg/bind-function.scala
import scala.events._

class C{
  def m() : Unit = {}
  imperative evt e[Unit]

//  def m1() = m()
  evt e0() = e()
  evt e1() = m()
}
